@@ -1,6 +1,7 @@
 Revision history for Net::Bullfinch
 
 {{$NEXT}}
+   * Add expire support for requests
 
 0.04 Feb 7 2012
    * Use Memcached::Client in lieu of Net::Kestrel, as it's likely
